Refactor AI tagging logic and update dependencies
Revised villager and piglin AI toggle mechanics with improved permission checks, dynamic world validation, and better modularity. Updated to support Minecraft API 1.21.4, upgraded dependencies, and adjusted configuration parameters for clarity and new features. Improved stability and robustness in piglin bartering mechanics.