@@ -1,7 +1,8 @@
 package net.fg83.sooperdooperscooper;
 
-import de.tr7zw.changeme.nbtapi.NBTCompound;
-import de.tr7zw.changeme.nbtapi.NBTEntity;
+import de.tr7zw.changeme.nbtapi.NBT;
+
+import de.tr7zw.changeme.nbtapi.iface.ReadWriteNBT;
 import net.md_5.bungee.api.ChatColor;
 import net.md_5.bungee.api.chat.TextComponent;
 import org.bukkit.Bukkit;
@@ -20,6 +21,7 @@ import org.bukkit.loot.LootTables;
 import org.bukkit.plugin.java.JavaPlugin;
 import org.bukkit.scheduler.BukkitRunnable;
 
+import javax.annotation.Nullable;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
@@ -50,7 +52,7 @@ public final class SDS extends JavaPlugin implements Listener {
 
         config = getConfig();
 
-        if (config.getBoolean("villager-tags")){
+        if (config.getBoolean("noai-villagers-trade")){
             if (config.getBoolean("working-hours-only")) {
                 restockInterval = Math.round((float) (7000 / config.getInt("daily-restock-count")));
             } else if (config.getBoolean("daytime-hours-only")) {
@@ -62,7 +64,12 @@ public final class SDS extends JavaPlugin implements Listener {
             new RestockTask().runTaskTimer(this, 0, restockInterval);
         }
 
-        if (config.getBoolean("piglin-tags")){
+        if (config.getBoolean("noai-piglins-barter")){
+            if (!NBT.preloadApi()) {
+                getLogger().warning("NBT-API wasn't initialized properly, disabling the plugin");
+                getPluginLoader().disablePlugin(this);
+                return;
+            }
             new DecrementPiglin().runTaskTimer(this, 0, 1);
         }
     }
@@ -72,143 +79,133 @@ public final class SDS extends JavaPlugin implements Listener {
         Player player = event.getPlayer();
         EquipmentSlot hand = event.getHand();
         ItemStack item = event.getPlayer().getInventory().getItem(hand);
+        Entity target = event.getRightClicked();
+
         assert item != null;
-        if (item.getType().equals(Material.NAME_TAG) && event.getRightClicked() instanceof LivingEntity) {
-            if (Objects.requireNonNull(item.getItemMeta()).hasDisplayName() && item.getItemMeta().getDisplayName().equalsIgnoreCase("nobrains")) {
-                if (event.getRightClicked() instanceof Villager) {
-                    if (config.getBoolean("villager-tags") || config.getBoolean("global-tags")) {
-                        noBrains(event, "villager");
-                        event.setCancelled(true);
+        if (item.getType().equals(Material.NAME_TAG) && target instanceof LivingEntity) {
+            assert item.getItemMeta() != null;
+
+            if (item.getItemMeta().hasDisplayName()){
+                String permNode;
+                if (item.getItemMeta().getDisplayName().equalsIgnoreCase("nobrains")) {
+                    if (event.getRightClicked() instanceof Villager) {
+                        permNode = ".villager";
                     }
+                    else if (event.getRightClicked() instanceof Piglin) {
+                        permNode = ".piglin";
+                    }
+                    else if (target instanceof ArmorStand || target instanceof Boat || target instanceof Minecart){
+                        sendResponse(player, ">> ...I--I genuinely don't know what you're going for here. But *fine*, waste your tag.", true);
+                        return;
+                    }
+                    else {
+                        permNode = "";
+                    }
+                    noBrains(event, permNode);
+                    return;
                 }
-                else if (event.getRightClicked() instanceof Piglin) {
-                    if (config.getBoolean("piglin-tags") || config.getBoolean("global-tags")) {
-                        noBrains(event, "piglin");
-                        event.setCancelled(true);
+                if (item.getItemMeta().getDisplayName().equalsIgnoreCase("givebrains")) {
+                    if (event.getRightClicked() instanceof Villager) {
+                        permNode = ".villager";
                     }
-                }
-                else {
-                    if (config.getBoolean("global-tags")){
-                        noBrains(event, "global");
-                        event.setCancelled(true);
+                    else if (event.getRightClicked() instanceof Piglin) {
+                        permNode = ".piglin";
                     }
-                }
-            } else if (item.getItemMeta().hasDisplayName() && item.getItemMeta().getDisplayName().equalsIgnoreCase("givebrains")) {
-                if (event.getRightClicked() instanceof Villager) {
-                    if (config.getBoolean("villager-tags") || config.getBoolean("global-tags")){
-                        giveBrains(event, "villager");
-                        event.setCancelled(true);
+                    else if (target instanceof ArmorStand || target instanceof Boat || target instanceof Minecart){
+                        sendResponse(player, ">> ...I--I genuinely don't know what you're going for here. But *fine*, waste your tag.", true);
+                        return;
                     }
-                }
-                else if (event.getRightClicked() instanceof Piglin){
-                    if (config.getBoolean("piglin-tags") || config.getBoolean("global-tags")){
-                        giveBrains(event, "piglin");
-                        event.setCancelled(true);
+                    else {
+                        permNode = "";
                     }
-                }
-                else {
-                    if (config.getBoolean("global-tags")){
-                        giveBrains(event, "global");
-                        event.setCancelled(true);
-                    }
+                    giveBrains(event, permNode);
                 }
             }
         }
     }
 
-    private void noBrains(PlayerInteractEntityEvent event, String permissionNode){
-        Player player = event.getPlayer();
-        EquipmentSlot hand = event.getHand();
-        ItemStack item = event.getPlayer().getInventory().getItem(hand);
+    private Boolean checkPerm(Player player, String action, String permissionNode){
+        String permNode = "sds" + permissionNode + "." + action;
 
-        if (event.getRightClicked() instanceof Player){
+        if (player.hasPermission("sds." + action)){
+            return true;
+        }
+        else {
+            return player.hasPermission(permNode);
+        }
+    }
+    private void noBrains(PlayerInteractEntityEvent event, @Nullable String permissionNode){
+        Player player = event.getPlayer();
+        LivingEntity targetEntity = (LivingEntity) event.getRightClicked();
+        World.Environment worldEnv = event.getPlayer().getWorld().getEnvironment();
+
+        if (targetEntity instanceof Player){
             sendResponse(player, ">> That is a human being, you absolute monster.", true);
             return;
         }
 
-        boolean permValid = false;
 
-        switch (permissionNode){
-            case "villager":
-                if (player.hasPermission("sds.villager.noBrains") || player.hasPermission("sds.globalNoBrains")){
-                    permValid = true;
-                }
-                break;
-            case "piglin":
-                if (player.hasPermission("sds.piglin.noBrains") || player.hasPermission("sds.globalNoBrains")){
-                    permValid = true;
-                }
-                break;
-            case "global":
-                if (player.hasPermission("sds.globalNoBrains")){
-                    permValid = true;
-                }
-                break;
-        }
 
-        if (permValid) {
-            LivingEntity targetEntity = (LivingEntity) event.getRightClicked();
+        if (checkPerm(player, "noBrains", permissionNode)) {
             if (targetEntity.hasAI()) {
+                if (targetEntity instanceof Piglin){
+                    if (!worldEnv.equals(World.Environment.NETHER) && !config.getBoolean("allow-non-nether") && !player.hasPermission("sds.noBrains")){
+                        sendResponse(player, ">> You cannot save this piglin's life. I'm sorry for your loss, doctor.", true);
+                        event.setCancelled(true);
+                        return;
+                    }
+                }
+
                 targetEntity.setAI(false);
-                Objects.requireNonNull(player.getInventory().getItem(hand)).setAmount(item.getAmount() - 1);
                 sendResponse(player, ">> Lobotomy successful! Head empty, no thoughts.", false);
-            } else {
+            }
+            else {
                 sendResponse(player, ">> There's nothing but air in here already!", true);
+                event.setCancelled(true);
             }
         }
         else {
             sendResponse(player, ">> You don't have permission to do that, \"Doctor\".", true);
+            event.setCancelled(true);
         }
     }
     private void giveBrains(PlayerInteractEntityEvent event, String permissionNode){
         Player player = event.getPlayer();
-        EquipmentSlot hand = event.getHand();
-        ItemStack item = event.getPlayer().getInventory().getItem(hand);
+        LivingEntity targetEntity = (LivingEntity) event.getRightClicked();
+        World.Environment worldEnv = event.getPlayer().getWorld().getEnvironment();
 
         if (event.getRightClicked() instanceof Player){
             sendResponse(player, ">> Are you trying to say they don't have a brain? Wow. Rude.", true);
             return;
         }
 
-        boolean permValid = false;
+        if (checkPerm(player, "giveBrains", permissionNode)) {
+            if (!targetEntity.hasAI()){
+                if (targetEntity instanceof Piglin){
+                    if (!worldEnv.equals(World.Environment.NETHER) && !config.getBoolean("allow-non-nether") && !player.hasPermission("sds.giveBrains")){
+                        sendResponse(player, ">> This Piglin was saved by divine intervention. You cannot do this.", true);
+                        event.setCancelled(true);
+                        return;
+                    }
+                }
 
-        switch (permissionNode){
-            case "villager":
-                if (player.hasPermission("sds.villager.giveBrains") || player.hasPermission("sds.globalGiveBrains")){
-                    permValid = true;
-                }
-                break;
-            case "piglin":
-                if (player.hasPermission("sds.piglin.giveBrains") || player.hasPermission("sds.globalGiveBrains")){
-                    permValid = true;
-                }
-                break;
-            case "global":
-                if (player.hasPermission("sds.globalGiveBrains")){
-                    permValid = true;
-                }
-                break;
-        }
-
-        if (permValid) {
-            LivingEntity targetEntity = (LivingEntity) event.getRightClicked();
-            if (targetEntity.hasAI()){
-                sendResponse(player, ">> Slow down there, sport! There's already a brain in here!", true);
+                targetEntity.setAI(true);
+                sendResponse(player, ">> Lobotomy reversed! Hopefully there are no lasting effects.", false);
             }
             else {
-                targetEntity.setAI(true);
-                Objects.requireNonNull(player.getInventory().getItem(hand)).setAmount(item.getAmount() - 1);
-                sendResponse(player, ">> Lobotomy reversed! Hopefully there are no lasting effects.", false);
+                sendResponse(player, ">> Slow down there, sport! There's already a brain in here!", true);
+                event.setCancelled(true);
             }
         }
         else {
             sendResponse(player, ">> You don't have permission to do that, \"Doctor\".", true);
+            event.setCancelled(true);
         }
     }
     private class RestockTask extends BukkitRunnable {
         @Override
         public void run() {
-            long time = getServer().getWorlds().get(0).getTime();
+            long time = getServer().getWorlds().getFirst().getTime();
 
             if (config.getBoolean("working-hours-only") && (time < 2000 || time > 9000)) {
                 return;
@@ -243,38 +240,52 @@ public final class SDS extends JavaPlugin implements Listener {
     private class DecrementPiglin extends BukkitRunnable {
         @Override
         public void run() {
-            List<World> worlds = getServer().getWorlds();
-            for (World world : worlds) {
-                if (!world.getEnvironment().equals(World.Environment.NETHER)) {
-                    continue;
-                }
-                for (Piglin piglin : world.getEntitiesByClass(Piglin.class)) {
-                    if (piglin.hasAI() || !piglin.isAdult()){
+            try {
+
+                List<World> worlds = getServer().getWorlds();
+                for (World world : worlds) {
+                    if (!world.getEnvironment().equals(World.Environment.NETHER) && !config.getBoolean("allow-non-nether-barter")) {
                         continue;
                     }
-                    NBTEntity nbtPig = new NBTEntity(piglin);
-                    NBTCompound memories = nbtPig.getCompound("Brain").getCompound("memories");
-                    if (memories.hasTag("minecraft:admiring_item")){
-                        NBTCompound admiring = memories.getCompound("minecraft:admiring_item");
-                        long ttl = admiring.getLong("ttl");
-                        if (ttl - 1 > 0){
-                            admiring.setLong("ttl", ttl - 1);
+                    for (Piglin piglin : world.getEntitiesByClass(Piglin.class)) {
+                        if (piglin.hasAI() || !piglin.isAdult()){
+                            continue;
                         }
-                        else {
-                            piglin.getInventory().clear();
-                            piglin.getEquipment().setItemInOffHand(null);
-                            memories.clearNBT();
 
-                            LootContext.Builder lootContextBuilder = new LootContext.Builder(piglin.getLocation()).lootedEntity(getServer().getOnlinePlayers().stream().findFirst().get());
+                        NBT.modify(piglin, nbt -> {
+                            ReadWriteNBT brain = nbt.getCompound("Brain");
+                            assert brain != null;
+                            ReadWriteNBT memories = brain.getCompound("memories");
+                            assert memories != null;
 
-                            List<ItemStack> outputItems = new ArrayList<>(LootTables.PIGLIN_BARTERING.getLootTable().populateLoot(null, lootContextBuilder.build()));
+                            if (memories.hasTag("minecraft:admiring_item")){
 
-                            for (ItemStack item : outputItems){
-                                piglin.getWorld().dropItem(piglin.getLocation(), item);
+                                ReadWriteNBT admiring = memories.getCompound("minecraft:admiring_item");
+                                assert admiring != null;
+                                long ttl = admiring.getLong("ttl");
+                                if (ttl - 1 > 0){
+                                    admiring.setLong("ttl", ttl - 1);
+                                }
+                                else {
+                                    piglin.getInventory().clear();
+                                    Objects.requireNonNull(piglin.getEquipment()).setItemInOffHand(null);
+                                    memories.clearNBT();
+
+                                    LootContext.Builder lootContextBuilder = new LootContext.Builder(piglin.getLocation()).lootedEntity(getServer().getOnlinePlayers().stream().findFirst().orElseThrow());
+
+                                    List<ItemStack> outputItems = new ArrayList<>(LootTables.PIGLIN_BARTERING.getLootTable().populateLoot(null, lootContextBuilder.build()));
+
+                                    for (ItemStack item : outputItems){
+                                        piglin.getWorld().dropItem(piglin.getLocation(), item);
+                                    }
+                                }
                             }
-                        }
+                        });
                     }
                 }
+            }
+            catch (Exception e){
+                getServer().getLogger().warning(e.getMessage());
             }
         }
     }
